[ViewportAPI] Fire resize when scrollbars appear or disappear.

The window.view width and height attributes exclude any non-overlay
scrollbars. This means that if a scrollbar appears or disappears they'll
change values. According to the spec (and intuition) this should fire a
resize event but it doesn't.

This patch adds the resize event whenever the main frame loses or gains
a non-overlay scrollbar.

Bug: 728658
Change-Id: I32359342e795a1390cbedc95330260f03e0e2066
Reviewed-on: https://chromium-review.googlesource.com/521362
Reviewed-by: David Tapuska <dtapuska@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476383}
Former-commit-id: 2fb058d75cf9c596bf29df6045bd618b0e742d77