third_party/WebKit/Source/core/frame/LocalFrameView.cpp
@@ -2168,8 +2168,14 @@ void LocalFrameView::ScrollbarExistenceDidChange() {
       ScrollbarTheme::GetTheme().UsesOverlayScrollbars() &&
       !ShouldUseCustomScrollbars(custom_scrollbar_element);
 
-  if (!uses_overlay_scrollbars && NeedsLayout())
-    UpdateLayout();
+  if (!uses_overlay_scrollbars) {
+    if (NeedsLayout())
+      UpdateLayout();
+
+    if (frame_->IsMainFrame() &&
+        RuntimeEnabledFeatures::visualViewportAPIEnabled())
+      frame_->GetDocument()->EnqueueVisualViewportResizeEvent();
+  }
 
   if (!GetLayoutViewItem().IsNull() && GetLayoutViewItem().UsesCompositing()) {
     GetLayoutViewItem().Compositor()->FrameViewScrollbarsExistenceDidChange();
